--- a/src/styles/Timer.css
+++ b/src/styles/Timer.css
@@ -42,14 +42,14 @@
   color: #d04f2a;
   font-family: "Poppins", sans-serif;
   text-align: center;
-  margin-top: 200px;
+  margin-top: 130px;
 }
 
 .timer-controls {
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin-top: 150px;
+  margin-top: 100px;
   filter: invert(30%); /* Cambia colore per il contrasto */
 }
 
@@ -69,5 +69,12 @@
   transition: transform 0.2s ease-in-out;
 }
 
+.timer-wrapper {
+  width: 100%;
+  max-width: none; /* Rimuove limiti */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 
