--- a/src/styles/TimerPage.css
+++ b/src/styles/TimerPage.css
@@ -62,7 +62,7 @@ html, body {
   color: #d04f2a;
   font-family: "Poppins", sans-serif;
   text-align: center;
-  margin-top: 0; /* Rimuove margini inutili */
+  margin-top: 10px; /* Rimuove margini inutili */
 }
 
 
